[package]
name = "rustque"
version = "0.1.0"
authors = ["gzbakku <gzbakku@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gzb_binary_69 = "0.1.0"
tokio = { version = "1.14.0", features = ["full"] }
crossbeam = "0.8.1"
flume = "0.10.9"
byteorder = "1.4.3"