[package]
name = "rustque"
version = "1.0.8"
authors = ["gzbakku <gzbakku@gmail.com>"]
edition = "2018"

description = "this is a fast on disk perstant memeory mapped que for rust it stores Vec<u8> to a file on a disk."
homepage = "https://github.com/gzbakku/rust_store"
repository = "https://github.com/gzbakku/rust_store"
readme = "README.md"
keywords = ["database", "que","data","store","disk"]
categories = ["database-implementations", "data-structures","Database interfaces"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
benchmark = []

[dependencies]
# gzb_binary_69 = "0.1.1"
tokio = { version = "1.14.0", features = ["full"] }
crossbeam = "0.8.1"
flume = "0.10.9"
byteorder = "1.4.3"
gzb_binary_69 = "0.2.2"
futures = "0.3.19"
# gzb_binary_69 = {path="../gzb_binary_69"}